[gd_scene load_steps=2 format=3 uid="uid://db1bnwhfsfbvx"]

[ext_resource type="Script" uid="uid://deirr5xccrio8" path="res://Scenes/Managers/game_manager.gd" id="1_hqrb7"]

[node name="game_manager" type="Node"]
script = ExtResource("1_hqrb7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="input_blocker" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -1576.0
offset_top = -1321.0
offset_right = 2418.0
offset_bottom = 1331.0

[node name="game_finish" type="Button" parent="CanvasLayer"]
visible = false
top_level = true
z_index = 15
offset_left = 277.0
offset_top = 107.0
offset_right = 846.0
offset_bottom = 539.0
theme_override_font_sizes/font_size = 80
text = "Game Finish"

[connection signal="pressed" from="CanvasLayer/game_finish" to="." method="_on_game_finish_pressed"]
